<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_marginBottom="64dp"
        android:hint="@string/login_email"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/password" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true"
        android:hint="@string/login_password"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="246dp" />

    <Button android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/login_button"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Button
        style="?android:textAppearanceSmall"
        android:background="@null"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_alignTop="@+id/email_sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/login_register" />

</RelativeLayout>