<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="144dp">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_username"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/register_username"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_email"
        android:id="@+id/textView"
        android:layout_below="@+id/register_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <AutoCompleteTextView android:id="@+id/register_email" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_password"
        android:id="@+id/textView2"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_me"
        android:id="@+id/da_register_button"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true" />


</RelativeLayout>